--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-div{
+div.app{
   background-color: rgb(162, 127, 243);
   color: rgb(255,255,255);
   padding: 40px;
@@ -6,9 +6,10 @@ div{
   text-align: center;
 }
 
-h1{
+h1.title{
   color: white;
   background-color: #2EFE2E;
   padding: 10px;
   font-family: 궁서;
+  margin-bottom: 100px;
 }
